--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@ant-design/icons",
-  "version": "4.0.0-alpha.8",
+  "name": "@wanke-gui/icons",
+  "version": "1.0.0",
   "main": "./lib/index.js",
   "module": "./es/index.js",
   "sideEffects": false,
-  "repository": "https://github.com/ant-design/ant-design-icons/tree/master/packages/icons-react",
+  "repository": "https://github.com/jiangyukun/wanke-gui-icons/tree/master/packages/icons-react",
   "contributors": [
     "HeskeyBaozi<hezhiyu233@foxmail.com>",
     "vagusX<vagusxl@gmail.com>"
