--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@ant-design/icons-svg",
-  "version": "4.0.0-alpha.0",
+  "name": "@wanke-gui/icons-svg",
+  "version": "1.0.0",
   "description": "Ant Design Icons",
   "module": "lib/index.es.js",
   "main": "lib/index.js",
   "sideEffects": false,
-  "repository": "https://github.com/ant-design/ant-design-icons",
+  "repository": "https://github.com/jiangyukun/wanke-gui-icons",
   "contributors": [
     "HeskeyBaozi <hezhiyu233@foxmail.com>"
   ],
