--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -18,7 +18,7 @@
     "test": "father test",
     "prepublishOnly": "npm run lint && npm run test && npm run generate && npm run compile && np --no-cleanup --yolo --no-publish",
     "generate": "node scripts/generateIcons.js",
-    "postcompile": "./scripts/cleanup.sh && node scripts/generateIconEntries.js"
+    "postcompile": "node scripts/generateIconEntries.js"
   },
   "peerDependencies": {
     "react": "16.x"
@@ -53,5 +53,5 @@
     "insert-css": "^2.0.0",
     "rc-util": "^4.9.0"
   },
-  "gitHead": "225d4d2189720ee3b7e4a4d7a6d80e076fa15cbc"
+  "gitHead": "5da14a893d9168eace1f6e83a392cb673687273c"
 }
