--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint src/ --ext .tsx,.ts",
     "compile": "father build",
     "test": "father test",
-    "prepublishOnly": "npm run lint && npm run test && npm run generate && npm run compile && np --no-cleanup --yolo --no-publish",
+    "prepublishOnly": "",
     "generate": "node scripts/generateIcons.js",
     "postcompile": "node scripts/generateIconEntries.js"
   },
@@ -53,5 +53,5 @@
     "insert-css": "^2.0.0",
     "rc-util": "^4.9.0"
   },
-  "gitHead": "5da14a893d9168eace1f6e83a392cb673687273c"
+  "gitHead": "1930cc4dae66ad44cac9ea97f4c603aa6eda5524"
 }
