--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wanke-gui/icons-svg",
+  "name": "wanke-gui-icons-svg",
   "version": "1.0.4",
   "description": "Ant Design Icons",
   "module": "lib/index.es.js",
@@ -109,5 +109,5 @@
       "<rootDir>/.cache/"
     ]
   },
-  "gitHead": "3a1fca260feaa7d4671cbec6563ce9b56bf0c692"
+  "gitHead": "0dbacd52db586f0448ba232fe1abc94282885c8e"
 }
