--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -16,7 +16,7 @@
     "build": "rc-tools run build",
     "dist": "rc-tools run dist",
     "test": "jest",
-    "prepublish": "npm run lint && npm run test && npm run compile"
+    "prepublish": ""
   },
   "files": [
     "es",
@@ -74,5 +74,5 @@
       "node"
     ]
   },
-  "gitHead": "225d4d2189720ee3b7e4a4d7a6d80e076fa15cbc"
+  "gitHead": "25ade17a2fbb875f1499b16d5c99416e4184cfff"
 }
