--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -49,7 +49,9 @@
   },
   "dependencies": {
     "@ant-design/colors": "^3.1.0",
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "global": "^4.4.0",
+    "lerna": "^3.16.4"
   },
   "config": {
     "port": 9527,
